# wire-shrimp

./: .clang-uml  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: config.hpp  headers.hpp  main.cpp  packet.hpp  parser.cpp  parser.hpp  printer.cpp  printer.hpp  receiver.cpp  receiver.hpp
tests/: test_hello_world.cpp
uml/: uml_activity.txt  uml_data.txt
